--- a/content/drag-and-drop-in-react-with-dnd-kit.mdx
+++ b/content/drag-and-drop-in-react-with-dnd-kit.mdx
@@ -8,9 +8,9 @@ thumbnail: "/assets/blog/dynamic-routing/cover.jpg"
 postId: "drag-and-drop-in-react-with-dnd-kit"
 ---
 
-DnD Kit is a relatively new, hook-based library that makes it easy to create performant and accessible drag-and-drop UI interactions in React. I have been using the library a lot at Super, particularly in our new dashboard, and I wanted to share some examples of the kind of interactions that can be built with it.
+DnD Kit is a relatively new, hook-based library that makes it easy to create performant and accessible drag-and-drop UI interactions in React. I have been using the library a lot at [Super](https://super.so/), particularly in our new dashboard, and I wanted to share some examples of the kind of interactions that can be built with it.
 
-In this post, I will provide a brief overview of the core concepts behind `@dnd-kit` and then i’ll move on to a number of [code examples](#examples) with explanations. If you need more detail about anything i cover, you can always consult the documentation [here](https://docs.dndkit.com/).
+In this post, I will provide a brief overview of the core concepts behind `@dnd-kit` and then i’ll move on to a number of [code examples](#examples) with explanations. If you need more detail about anything i cover, you can always check out the documentation [here](https://docs.dndkit.com/).
 
 <Callout intent="info" heading="Intended Audience">
   This article assumes you have a basic understanding of React and Typescript.
@@ -34,9 +34,9 @@ In the demo, we can drag our draggable components and drop them anywhere on the 
 
 DndKit is designed around this approach, providing three core primitives exported from the `@dnd-kit/core` package:
 
-1. The [`useDraggable`](https://docs.dndkit.com/api-documentation/draggable) hook - A React hook which makes HTML elements draggable.
-2. The [`useDroppable`](https://docs.dndkit.com/api-documentation/droppable) hook - A React hook which makes HTML elements droppable areas.
-3. The [`DndContext`](https://docs.dndkit.com/api-documentation/context-provider) - A context provider which manages the interaction between draggable and droppable components using the React Context API.
+1. The `useDraggable` hook - A React hook which makes HTML elements draggable.
+2. The `useDroppable` hook - A React hook which makes HTML elements droppable areas.
+3. The `DndContext` - A context provider which manages the interaction between draggable and droppable components using the React Context API.
 
 Drag-and-drop interactions often require more than just dragging and dropping components. For example, take a look at the demo below:
 
