fix: more clean ups
Signed-off-by: KXLAA <kolade.afode@yahoo.com>

--- a/content/drag-and-drop-in-react-with-dnd-kit-by-example.mdx
+++ b/content/drag-and-drop-in-react-with-dnd-kit-by-example.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Drag & drop in React with Dnd Kit"
+title: "Drag & Drop in React with Dnd Kit by Example"
 publishedAt: "2023-01-31"
 description: "A simple guide to get started with Dnd Kit in React."
 tags: ["React", "Typescript", "Tutorial"]
