fix: rename article
Signed-off-by: KXLAA <kolade.afode@yahoo.com>

--- a/content/drag-and-drop-in-react-with-dnd-kit.mdx
+++ b/content/drag-and-drop-in-react-with-dnd-kit.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Drag & Drop in React with Dnd Kit by Example"
+title: "Drag & Drop in React with Dnd Kit"
 publishedAt: "2023-01-31"
 description: "Learn how to use DnD Kit to create stunning drag-and-drop experiences in React, with interactive examples."
 tags: ["React", "Typescript", "Tutorial"]
