--- a/content/experiments/vercel-env.mdx
+++ b/content/experiments/vercel-env.mdx
@@ -1,5 +1,7 @@
 ---
 heading: "Vercel env Inputs"
+mp4: "https://ucarecdn.com/5ca69719-8a2b-40ae-9f62-3feacea8f4a5/frontendcardio.mp4"
+webm: "https://ucarecdn.com/c3475aa3-7ba4-4e60-9768-73cda55e9d6d/frontendcardio.webm"
 links:
   github: "Vercel env Inputs"
   codesandbox: "https://vercel.com/docs/build-step#inputs"
