--- a/content/posts/drag-and-drop-in-react-with-dnd-kit.mdx
+++ b/content/posts/drag-and-drop-in-react-with-dnd-kit.mdx
@@ -3,6 +3,7 @@ title: "Drag & Drop in React with Dnd Kit"
 publishedAt: "2023-01-31"
 description: "Learn how to use DnD Kit to create stunning drag-and-drop experiences in React, with interactive examples."
 tags: ["React", "Typescript", "Tutorial"]
+ogImage: "/images/dnd-kit-og.png"
 ---
 
 DnD Kit is a relatively new, hook-based library that makes it easy to create performant and accessible drag-and-drop UI interactions in React. I have been using the library a lot at [Super](https://super.so/), particularly in our new dashboard, and I wanted to share some examples of the kind of interactions that can be built with it.
