--- a/content/experiments/_mixcloud-tracklist.mdx
+++ b/content/experiments/_mixcloud-tracklist.mdx
@@ -3,6 +3,7 @@ title: "Mixcloud Tracklist"
 publishedAt: "2022"
 mp4: "https://ucarecdn.com/5ca69719-8a2b-40ae-9f62-3feacea8f4a5/frontendcardio.mp4"
 webm: "https://ucarecdn.com/c3475aa3-7ba4-4e60-9768-73cda55e9d6d/frontendcardio.webm"
+poster: "https://ucarecdn.com/d512cf8a-2d4f-4f32-b046-3833d75e5efa/vercelenvposter.png"
 links:
   github: "mixcloud"
   codesandbox: "https://vercel.com/docs/build-step#inputs"
