fix: more fixes to seo
Signed-off-by: KXLAA <kolade.afode@yahoo.com>

--- a/content/posts/drag-and-drop-in-react-with-dnd-kit.mdx
+++ b/content/posts/drag-and-drop-in-react-with-dnd-kit.mdx
@@ -3,7 +3,7 @@ title: "Drag & Drop in React with Dnd Kit"
 publishedAt: "2023-02-15"
 description: "Learn how to use DnD Kit to create stunning drag-and-drop experiences in React, with interactive examples."
 tags: ["React", "Typescript", "Tutorial"]
-ogImage: "https://ucarecdn.com/b85dfb99-6f2e-4d1b-ae4b-27c2edc202a2/dndkitog.jpg"
+ogImage: "https://ucarecdn.com/21f3e54e-f99a-4098-a3f8-ff5482b4d3e7/dndog.png"
 ---
 
 DnD Kit is a relatively new, hook-based library that makes it easy to create performant and accessible drag-and-drop UI interactions in React. I have been using the library a lot at [Super](https://super.so/), particularly in our new dashboard, and I wanted to share some examples of the kind of interactions that can be built with it.
