--- a/content/posts/have-a-problem-before-you-solve-it.mdx
+++ b/content/posts/have-a-problem-before-you-solve-it.mdx
@@ -5,35 +5,43 @@ description: "Advice on why embracing problems is a good thing"
 tags: ["Advice", "Patterns", "Javascript", "React"]
 ---
 
-In popular discourse on Twitter about React, there is a fascination in the community with making sure components do not re-render unnecessarily. A lot of best practices and strategies are recommended such as restructuring the application or using making use memoization through `useMemo` & `memo`.
+In popular discourse on Twitter about React, there is a fascination in the community with making sure components do not re-render unnecessarily. A lot of best practices and strategies are recommended such as restructuring the application or using making use memoization strategies like `useMemo`, `memo` and `useCallback`.
 
-When it comes to handling state, it is generally advised to keep state local whenever possible. If you need shared or global state that will be used across multiple parts of the application, it is preferable to use external state management libraries such as Zustand or Redux instead of relying on React context.
+When it comes to handling state, it is generally advised to keep state local whenever possible. If you need shared or global state that will be used across multiple parts of the application, it is preferable to use external state management libraries such as Zustand or Redux [instead of relying on React context](https://blog.isquaredsoftware.com/2021/01/context-redux-differences/).
 
 Keeping global state in React context should be avoided, unless it is state that does not change often. This is because when state in context changes, the entire part of the app that consumes that state will re-render.
 
-These optimisations & best practices are what developers are advised to do by default when writing React applications and as someone who works with react quit a lot i took these best practices and optimisations to heart.
+These optimisations & best practices are what developers are advised to do by default when writing React applications and as someone who works with React quit a lot i took these best practices to heart.
 
 But, did I fully understand why these are considered best practices or why a lot of influential people in the React community advise following these strategies?
 
-At Super, we have a fairly large front-end application written in React. This application is very dynamic and client side heavy, we rely a lot on state. On my first day, I went through the codebase and noticed that React context was used extensively throughout the application to share state deeply throughout the application.
+At [Super](https://super.so/), we have a fairly large front-end application written in React. This application is very dynamic and client side heavy, we rely a lot on complex state:
 
-When I came across this, I thought we could restructure the application to reduce reliance on React context for sharing state. Instead of using React context, we could use Zustand to manage the state of the application outside the React tree which should improve the performance of the application.
+<Image
+  src="/posts/have-a-problem-before-you-solve-it/super-app-demo.png"
+  width={1000}
+  height={720}
+/>
+
+On my first day, I reviewed the codebase and discovered that React context was used extensively throughout the application for sharing and managing state.
+
+When I came across this, I thought we could restructure the application to reduce reliance on React context for sharing state. Instead of using React context, we could use Zustand to manage state outside the React tree. This change should improve the performance of the application.
 
 What is the point of removing state from context? — To minimise unnecessary renders.
 
 Why do we want to reduce unnecessary renders? — To improve the performance of our application.
 
-But the application worked fine with React context. At that point i had run into no performance issues — Our UI was performant and there was no jank at all, or the performance issues that comes with excessive re-rendering.
-
-But our application worked fine with React context. At that point, we had not encountered any performance issues. Our UI was responsive with no janky behaviour or excessive re-rendering.
+But, the application worked fine with React context. At that point, I had encountered no performance issues. Our UI was performant, and there was no jank or performance issues caused by excessive re-rendering.
 
 So what would be the point of introducing an external state management library preemptively to the codebase, to solve a problem that we don't have yet? This would only add unnecessary complexity to the application for seemingly no good reason.
 
-It makes sense to first have a problem before you solve it.
+<Callout heading="It makes sense to first have a problem before you solve it">
+  If you don't have a problem, you don't need to solve it.
+</Callout>
 
-The problem with best practices is that, while they are made with good intentions and are sometimes helpful, there is beauty in encountering a problem, understanding it in the specific context in which it arises, and applying best practices to solve the problem instead of preemptively doing so.
+The problem with best practices is that, while they are made with good intentions and are helpful most of the time, there is beauty in encountering a problem, understanding it in the specific context in which it arises, and solving it instead of preemptively doing so.
 
-If you've read about `useMemo` or `memo`, you might understand why it's useful and the problems it solves. But if you've never had to solve the specific problem that `useMemo` solves in a codebase you're working on, you might never truly appreciate it’s benefits. Do not rob yourself of such a great learning opportunity by preemptively solving a problem that does not exist.
+If you've read about `useMemo`, `memo`, or `useCallback`, you may understand why they're useful and the problems they solve. However, if you haven't encountered the specific problem they solve in the context of the codebase you're working on, you may not fully appreciate their benefits. Don't miss out on this valuable learning opportunity by preemptively solving a problem that doesn't exist.
 
 Running in problems and solving them is a good thing.
 
@@ -43,11 +51,14 @@ For example, at Super I had to create an Icon picker for our version 3 release:
   src="/posts/have-a-problem-before-you-solve-it/icon-picker-demo.gif"
   width={1000}
   height={720}
+  style={{
+    borderRadius: "10px",
+  }}
 />
 
-As you can imagine, this component is quite heavy, with a long list of rendered components. After building it out, I ran into performance issues. The scroll was janky, searching for icons was slow, and the component took a while to show up on the screen when triggered.
+As you can imagine, this component is quite heavy, with a long list of rendered components. After building out the first iteration, I ran into performance issues. The scroll was janky, searching for icons was slow, and the component took a while to show up on the screen when triggered.
 
-I decided to search for how i could solve this problem and i discovered the list virtualisation technique. List virtualisations is a technique used to efficiently display large lists of data by rendering only the visible list items in a scrolling viewport. You can learn more about the technique [here](https://www.patterns.dev/posts/virtual-lists).
+I searched for a solution to this problem and discovered the [list virtualization technique](https://www.patterns.dev/posts/virtual-lists). This technique is used to efficiently display large lists of data by rendering only the visible list items in a scrolling viewport.
 
 Using the technique with the icon picker significantly improved its performance. It felt like magic and it gave me a deeper appreciation and understanding of list virtualisation — I encountered a problem in a specific context, searched for a solution, found one, and applied it.
 
