feat: another new design lol
Signed-off-by: KXLAA <kolade.afode@yahoo.com>

--- a/content/posts/drag-and-drop-in-react-with-dnd-kit.mdx
+++ b/content/posts/drag-and-drop-in-react-with-dnd-kit.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Drag & Drop in React with Dnd Kit"
 publishedAt: "2023-02-21"
-description: "Learn how to use DnD Kit to create stunning drag-and-drop experiences in React, with interactive examples."
+description: "Learn how to use DnD Kit to create stunning drag-and-drop experiences."
 tags: ["React", "Typescript", "Tutorial"]
 og: "https://ucarecdn.com/bb363e6e-5444-46c6-b8cd-230e88e34b20/dndog.png"
 ---
