--- a/content/posts/nsfw-javascript-the-comma-operator.mdx
+++ b/content/posts/nsfw-javascript-the-comma-operator.mdx
@@ -1,7 +1,7 @@
 ---
 title: "NSFW Javascript - The Comma Operator"
 publishedAt: "2023-03-15"
-description: "Exploring the weird comma operator in Javascript"
+description: "Exploring the weird comma operator in Javascript."
 tags: ["Javascript", "Patterns"]
 og: "https://ucarecdn.com/6e66dd12-e3ca-49c8-8df2-f298898e2d76/thecommaoperatorog.png"
 ---
