--- a/content/experiments/vercel-env.mdx
+++ b/content/experiments/vercel-env.mdx
@@ -1,6 +1,7 @@
 ---
 title: "Vercel env Inputs"
 publishedAt: "2023-02-21"
+description: "Copy and Paste your env files in one go"
 mp4: "https://ucarecdn.com/2a583a56-0b21-4f4e-9e0b-7714701b61c2/vercelenv.mp4"
 webm: "https://ucarecdn.com/0acd2738-de34-4924-8fa6-a3e3793848f2/vercelenv.webm"
 poster: "https://ucarecdn.com/14f55dfc-f15b-419e-89c6-dcec82dd0ffb/vercelenvposter.png"
