--- a/content/experiments/_mixcloud-tracklist.mdx
+++ b/content/experiments/_mixcloud-tracklist.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Mixcloud Tracklist"
-publishedAt: "2022",
+publishedAt: "2022"
 description: "Copy and Paste your env files in one go"
 mp4: "https://ucarecdn.com/5ca69719-8a2b-40ae-9f62-3feacea8f4a5/frontendcardio.mp4"
 webm: "https://ucarecdn.com/c3475aa3-7ba4-4e60-9768-73cda55e9d6d/frontendcardio.webm"
