--- a/content/posts/feature-flags-with-react-hooks.mdx
+++ b/content/posts/feature-flags-with-react-hooks.mdx
@@ -8,7 +8,7 @@ og: "https://ucarecdn.com/bb363e6e-5444-46c6-b8cd-230e88e34b20/dndog.png"
 
 Feature flags are boolean values that we can use to conditionally show or hide parts of our application. This blog currently uses feature flags to hide incomplete articles and pages that are still being worked on.
 
-Much has been written about the benefits of using feature flags. You can check out [this article](https://www.honeycomb.io/blog/deploys-wrong-way-change-user-experience) for a good summary of their benefits. In this post, I'll walk you through building a minimal feature flagging system using React hooks that you can use in your projects.
+Much has been written about the benefits of using feature flags. You can check out [this article](https://www.honeycomb.io/blog/deploys-wrong-way-change-user-experience) for a good summary of their benefits. In this post, I'll walk you through building a minimal feature flagging system using React hooks.
 
 <Callout heading="Completed Code">
   Just want to see the code ? Check out the
@@ -17,7 +17,7 @@ Much has been written about the benefits of using feature flags. You can check o
 
 ### Storing the feature flags
 
-We will be storing all of the information about of our features as a json object:
+First, we will store all the information about our features as a JSON object:
 
 ```json
 {
@@ -44,11 +44,11 @@ We will be storing all of the information about of our features as a json object
 }
 ```
 
-Each feature has a `environment` property, which is an object containing two properties: `development` and `production`. Each of these properties contains an additional object with a single property, `enabled`, which is a boolean value. We can use this to enable or disable a particular feature depending on the environment we are in.
+Each feature has an `environment` property, which is an object containing two properties: `development` and `production`. Each of these properties contains an additional object with a single property, `enabled`, which is a boolean value. We can use this to enable or disable a particular feature depending on the environment that the application is currently in.
 
 ### Checking for a feature with Hooks
 
-Before building the hooks, let's create TypeScript types for a JSON object. We need a `Feature` type that is a union of all the keys in our features. We can obtain this easily from our features JSON object:
+Before building the hooks, let's create TypeScript types for our `features.json`. We need a `Feature` type that is a union of all the keys in our features object:
 
 ```ts
 //our json object
@@ -73,13 +73,13 @@ type FeatureConfig = {
 };
 ```
 
-Finally, we combine the two types using the TypeScript [Record utility](https://www.typescriptlang.org/docs/handbook/utility-types.html#recordkeys-type) to create the `FeatureSet` type. This type represents the entire feature JSON object:
+Finally, we combine the two types using the TypeScript [Record utility](https://www.typescriptlang.org/docs/handbook/utility-types.html#recordkeys-type) to create the `FeatureSet` type. This type represents the entire `features.json`:
 
 ```ts
 type FeatureSet = Record<Feature, FeatureConfig>;
 ```
 
-We will build two hooks to check if a feature is enabled. The first hook, `useFeatureCheck`, returns a function that takes in a feature name as an argument and checks if that feature is enabled based on our JSON object:
+We will build two hooks to check if a feature is enabled. The first hook, `useFeatureCheck`, returns a function that takes in a feature name as an argument and checks if that feature is enabled based on our `features.json`:
 
 ```ts
 function useFeatureCheck() {
