fix: text stuff
Signed-off-by: KXLAA <kolade.afode@yahoo.com>

--- a/content/posts/nigerian-culture-and-the-workplace.mdx
+++ b/content/posts/nigerian-culture-and-the-workplace.mdx
@@ -27,4 +27,4 @@ Personally, I have learned to find my voice in the workplace. I have been fortun
 
 Coming to terms with the impact of Nigerian culture on my workplace relationships has taught me the importance of understanding the context in which everyone operates, whether at work or elsewhere. Without appreciating or understanding that context, building deep connections can be difficult.
 
-**What is your context ?**
+_**What is your context ?**_
