--- a/content/posts/nsfw-javascript-the-comma-operator.mdx
+++ b/content/posts/nsfw-javascript-the-comma-operator.mdx
@@ -6,7 +6,7 @@ tags: ["Javascript", "Patterns"]
 og: "https://ucarecdn.com/6e66dd12-e3ca-49c8-8df2-f298898e2d76/thecommaoperatorog.png"
 ---
 
-While reading "[_JavaScript: The New Toys_](https://www.amazon.co.uk/JavaScript-Toys-T-J-Crowder/dp/1119367956)", a fantastic book on the new features introduced in JavaScript with ES6, I came across an operator that was new to me: the **comma** operator.
+While reading [JavaScript: The New Toys](https://www.amazon.co.uk/JavaScript-Toys-T-J-Crowder/dp/1119367956), a fantastic book on the new features introduced in JavaScript with ES6, I came across an operator that was new to me: the **comma** operator.
 
 Take a look at the following code snippet:
 
