--- a/content/articles/why-did-you-code-it-this-way.mdx
+++ b/content/articles/why-did-you-code-it-this-way.mdx
@@ -14,7 +14,7 @@ This may come off as an overreaction - the whole purpose of code review is for q
 
 However, this is a wrong conclusion. There are many reasons why someone could ask, "Why did you code it this way?" The person may not have seen the pattern you used before or may not be familiar with the language feature or library you used in the code.
 
-But do software engineers always need to have a clear reason for why we took a particular approach?
+But do software engineers always need to have a clear reason for why they took a particular approach?
 
 When I am in the flow state and writing code, I may subconsciously incorporate patterns that I have come across in a blog or from a book I have read. I may write code in a manner that aligns with conventions from a previous codebase I have worked on. Some of these conventions may be purely stylistic with no tangible benefits, yet I still adhere to them. If asked why, explaining these choices could be difficult.
 
