feat: add new fields for articles
Signed-off-by: KXLAA <kolade.afode@yahoo.com>

--- a/content/articles/feature-flags-with-react-hooks.mdx
+++ b/content/articles/feature-flags-with-react-hooks.mdx
@@ -4,6 +4,7 @@ publishedAt: "2023-04-30"
 description: "Learn how to build feature flags with React Hooks"
 tags: ["React", "Typescript", "Tutorial"]
 og: "https://ucarecdn.com/f09a8270-bd31-47c9-b64a-7f9ec0490b34/featureflagswithreacthooks.png"
+status: "published"
 ---
 
 Feature flags are boolean values that we can use to conditionally show or hide parts of our application. This blog currently uses feature flags to hide incomplete articles and pages that are still being worked on.
