--- a/content/articles/nigerian-culture-and-the-workplace.mdx
+++ b/content/articles/nigerian-culture-and-the-workplace.mdx
@@ -4,6 +4,7 @@ publishedAt: "2023-06-03"
 description: "The impact of my Nigerian upbringing on my workplace interactions."
 tags: ["culture", "nigeria", "workplace"]
 og: "https://ucarecdn.com/0a9dc390-7752-4875-ad83-1a8e98c56e4d/nigeriancultureandtheworkplace.png"
+status: "published"
 ---
 
 I was reflecting on an interview I had with a company recently. During the interview, I was asked if I had any shortcomings when working with others. I responded that I sometimes find it challenging to speak up or suggest opinions when I perceive that everyone else in the room is more experienced than me. I often wonder what I could say that would be better than what everyone else would say.
