--- a/content/articles/why-did-you-code-it-this-way.mdx
+++ b/content/articles/why-did-you-code-it-this-way.mdx
@@ -4,6 +4,7 @@ publishedAt: "2023-12-29"
 description: 'How do you respond when someone asks, "Why did you code it this way?"'
 tags: ["Advice", "Collaboration", "Code Review", "JavaScript"]
 og: "https://ucarecdn.com/4a86ba66-0d56-4056-af32-b07fad9eb30a/whydidyoucodeitthisway.png"
+status: "published"
 ---
 
 _Why did you code it this way?_
