feat: more tidy
Signed-off-by: KXLAA <kolade.afode@yahoo.com>

--- a/content/articles/jumping-into-the-world-of-aws.mdx
+++ b/content/articles/jumping-into-the-world-of-aws.mdx
@@ -4,22 +4,8 @@ publishedAt: "2024-01-12"
 description: 'How do you respond when someone asks, "Why did you code it this way?"'
 tags: ["Advice", "Collaboration", "Code Review", "JavaScript"]
 og: "https://ucarecdn.com/4a86ba66-0d56-4056-af32-b07fad9eb30a/whydidyoucodeitthisway.png"
-status: "progress"
+status: "draft"
 series:
   order: 1
   title: "Learning AWS with the cloud resume challenge"
 ---
-
-### Storing the feature flags
-
-### Retrieving the feature flags
-
-### Updating the feature flags
-
-### Deleting the feature flags
-
-### What's next?
-
-### Resources
-
-### References
