--- a/content/articles/preparing-for-the-certified-cloud-practitioner-certification.mdx
+++ b/content/articles/preparing-for-the-certified-cloud-practitioner-certification.mdx
@@ -1,11 +1,11 @@
 ---
-title: "Creating an AWS account the right way"
+title: "Preparing for the Certified Cloud Practitioner Certification"
 publishedAt: "2024-01-12"
 description: 'How do you respond when someone asks, "Why did you code it this way?"'
 tags: ["Advice", "Collaboration", "Code Review", "JavaScript"]
 og: "https://ucarecdn.com/4a86ba66-0d56-4056-af32-b07fad9eb30a/whydidyoucodeitthisway.png"
 status: "draft"
 series:
-  order: 2
+  order: 3
   title: "Learning AWS with the cloud resume challenge"
 ---
