fix: Add new note defs for content layer
Signed-off-by: KXLAA <kolade.afode@yahoo.com>

--- a/content/articles/jumping-into-the-world-of-aws.mdx
+++ b/content/articles/jumping-into-the-world-of-aws.mdx
@@ -1,8 +1,8 @@
 ---
 title: "Jumping into the scary world of AWS"
 publishedAt: "2024-01-12"
-description: 'How do you respond when someone asks, "Why did you code it this way?"'
-tags: ["Advice", "Collaboration", "Code Review", "JavaScript"]
+description: "It's a new year & its time to face my fears and learn AWS once and for all."
+tags: ["AWS", "Cloud", "Cloud Resume Challenge"]
 og: "https://ucarecdn.com/ef3a88c3-277a-4bdd-bd7b-26095f5adf73/jumpingintothescaryworldofaws.png"
 status: "draft"
 series:
